deployment/overlays/development/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: parakeetasr
spec:
  hosts:
    - "parakeetasr.dev.intouchcx.cloud"
  gateways:
    - parakeetasr-gateway
